--- a/android/example-android-app/build.gradle
+++ b/android/example-android-app/build.gradle
@@ -1,9 +1,10 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
     defaultConfig {
+        applicationId "org.frutilla.example.android"
         minSdkVersion 10
         targetSdkVersion 22
         versionCode 1
@@ -22,7 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile project(':frutilla')
-    //testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test:runner:0.3'
+    testCompile 'junit:junit:4.12'
+    testCompile project(':frutilla')
+    testCompile project(':frutilla-android')
 }
