--- a/android/frutilla/build.gradle
+++ b/android/frutilla/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
 }
 
 // apply from: 'maven-push.gradle'
