--- a/android/frutilla/build.gradle
+++ b/android/frutilla/build.gradle
@@ -7,4 +7,4 @@ dependencies {
     testCompile "org.mockito:mockito-core:1.10.19"
 }
 
-apply from: 'maven-push.gradle'
+//apply from: 'maven-push.gradle'
