--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,5 +1,23 @@
 apply plugin: 'java'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -7,4 +25,4 @@ dependencies {
     testCompile "org.mockito:mockito-core:1.10.19"
 }
 
-apply from: 'maven-push.gradle'
+//apply from: 'maven-push.gradle'
