--- a/android/frutilla-android/build.gradle
+++ b/android/frutilla-android/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile project(':frutilla')
+    compile 'com.github.ignaciotcrespo:frutilla:0.7.0'
     //testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.3'
 }
