added support for codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,8 @@ branches:
 notifications:
   email:
   - itcrespo@gmail.com
+
+before_install:
+  - pip install codecov
+after_success:
+  - codecov
