added jacoco for codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ notifications:
   email:
   - itcrespo@gmail.com
 
-before_install:
-  - pip install codecov
+before_script:
+  - pip install --user codecov
+
 after_success:
   - codecov
