--- a/java/build.gradle
+++ b/java/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     compile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile 'org.jacoco:jacoco:0.7.5.201505241946'
 }
 
 //apply from: 'maven-push.gradle'
