updated travis for codecov.io with java

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,5 @@ notifications:
   email:
   - itcrespo@gmail.com
 
-before_script:
-  - pip install --user codecov
-
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
