--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 buildscript {
     repositories {
@@ -25,5 +26,16 @@ dependencies {
     testCompile "org.mockito:mockito-core:1.10.19"
     testCompile 'org.jacoco:org.jacoco.core:0.7.5.201505241946'
 }
+
+// thanks to: http://vorba.ch/2015/java-gradle-travis-jacoco-codecov.html
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.dependsOn jacocoTestReport
+
 
 //apply from: 'maven-push.gradle'
